testdata/baselines/reference/submodule/conformance/moduleExportAlias5.errors.txt
bug24754.js(4,1): error TS2631: Cannot assign to '"bug24754"' because it is a namespace.
bug24754.js(4,11): error TS2309: An export assignment cannot be used in a module with other exported elements.
bug24754.js(5,9): error TS2339: Property 'version' does not exist on type 'typeof import("bug24754")'.


==== bug24754.js (3 errors) ====
    // #24754
    const webpack = function (){
    }
    exports = module.exports = webpack;
    ~~~~~~~
!!! error TS2631: Cannot assign to '"bug24754"' because it is a namespace.
              ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    exports.version = 1001;
            ~~~~~~~
!!! error TS2339: Property 'version' does not exist on type 'typeof import("bug24754")'.
    
    webpack.WebpackOptionsDefaulter = 1111;
    